# winnove-medical-interview

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  run_all.sh
install_script/: cgal.sh
vtk_effort/: CMakeLists.txt  main.cpp
